@@ -1,12 +1,12 @@
-// set JAVA_HOME=C:\Program Files\Java\jdk-11.0.5+10
-// set JAVA_HOME=C:\Program Files\Java\jdk-16+36
+// Windows: set JAVA_HOME=C:\Program Files\Java\jdk-11.0.5+10
+// Windows: set JAVA_HOME=C:\Program Files\Java\jdk-16+36
+// MacOS: export JAVA_HOME=`/usr/libexec/java_home -v 11`
 
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
-    id 'org.beryx.runtime' version '1.12.4'
-    // id 'org.unbroken-dome.xjc' version '1.4.3'
-    id 'org.unbroken-dome.xjc' version '2.0.0' // https://github.com/unbroken-dome/gradle-xjc-plugin
+    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.beryx.runtime' version '1.12.5'
+    id 'org.unbroken-dome.xjc' version '2.0.0'
 }
 
 dependencies {
@@ -25,21 +25,11 @@ dependencies {
     // Jasperreports
     implementation 'net.sf.jasperreports:jasperreports:6.16.0'
     implementation 'net.sf.jasperreports:jasperreports-fonts:6.16.0'
-    implementation ('com.lowagie:itext:2.1.7') {
-        // exclude group: 'org.bouncycastle', module: 'bcmail-jdk15on'
-        // exclude group: 'org.bouncycastle', module: 'bcpkix-jdk15on'
-    }
+    implementation 'com.lowagie:itext:2.1.7'
 
-    // JAXB
-    // implementation 'javax.xml.bind:jaxb-api:2.3.1'
-    // implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
-
-    // XML Diff
-    // implementation 'org.xmlunit:xmlunit-core:2.6.3'
-    // Note: XML Unit 2.8+ contains all necessary JAXB/Jakarta dependencies
-    // see https://github.com/xmlunit/xmlunit/releases/tag/v2.8.0
+    // JAXB and XML Diff
     implementation 'org.xmlunit:xmlunit-core:2.8.1'
-    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3' // javax.xml.bind.annotation
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
 
     // test dependencies
@@ -55,22 +45,17 @@ javafx {
     modules = ['javafx.controls']
 }
 
-/* xjcGenerate {
-    source = fileTree('src/main/resources') { include '*.xsd' }
-} */
 xjc {
     // srcDirName = 'src/main/resources'
 }
 
-version = '21.04.12'
+version = '21.07.29'
 def company = 'My Company'
 
 mainClassName = "com.example.hellofx.Launcher"
 applicationName = 'hello-fx'
 
 application {
-    // mainClassName = "com.example.hellofx.Launcher"
-    // applicationName = 'hello-fx'
     applicationDefaultJvmArgs =  [
             // necessary for ControlsFX
             "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
@@ -79,11 +64,7 @@ application {
             "--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
             "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
             "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
-            // "--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-            // "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-            // "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
             "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
-
             // necessary for Jasperreports XML parsing
             // https://github.com/TIBCOSoftware/jasperreports/issues/61
             "--add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED",
@@ -97,13 +78,16 @@ runtime {
         installerName = applicationName
         // Set the environment property BADASS_JLINK_JPACKAGE_HOME or explicitly configure the below property
         def os = org.gradle.internal.os.OperatingSystem.current()
-        /* if(os.macOsX) {
-            jpackageHome = '/Library/Java/JavaVirtualMachines/jdk-14-jpackage.jdk/Contents/Home'
+        if(os.macOsX) {
+            // jpackageHome = '/Library/Java/JavaVirtualMachines/adoptopenjdk-16.jdk/Contents/Home'
+            jpackageHome = '/Library/Java/JavaVirtualMachines/jdk-17-b-32.jdk/Contents/Home'
         } else if(os.windows) {
-            jpackageHome = 'C:/Program Files/Java/jdk-16-ea+28'
-        } */
+            jpackageHome = 'C:/Program Files/Java/jdk-16+36'
+        } else {
+            // Linux
+            jpackageHome = '/usr/lib/jvm/jdk-16'
+        }
         jvmArgs = []
-        // jvmArgs = ['-Dfxgl.sliding.puzzle.dummy=nothingElse', '-Dfxgl.sliding.puzzle.title=somethingElse']
         installerOptions = [
                 // '--file-associations', 'src/main/resources/associations.properties',
                 '--app-version', version,
@@ -113,22 +97,18 @@ runtime {
         if(os.macOsX) {
             imageOptions = ['--icon', 'src/main/deploy/package/macosx/hello.icns']
             installerOptions += [
-/*
                 '--mac-sign',
-                '--mac-signing-key-user-name', System.getenv('SIGNING_KEY_USER_NAME'),
-                '--mac-signing-keychain', System.getenv('SIGNING_KEYCHAIN_PATH')
-*/
+                // '--mac-signing-key-user-name', System.getenv('SIGNING_KEY_USER_NAME'),
+                // '--mac-signing-keychain', System.getenv('SIGNING_KEYCHAIN_PATH')
             ]
         } else if(os.windows) {
             imageOptions = ['--icon', 'src/main/deploy/package/windows/hello.ico']
             installerType = 'msi'
             installerOptions += [
                     '--win-per-user-install',
-                    // , '--win-dir-chooser'
                     '--win-menu',
                     '--win-menu-group', company,
                     '--win-shortcut',
-                    // '--win-upgrade-uuid', '027D194C-359B-11B2-A85C-C5D71105C10C',
             ]
         }
     }
